--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div id="lost" class="hidden screen">
                 <h3 class="label">
-                    Game over! Your score was @score@. Your personal high score is @highScore@.<br>
+                    Game over! Your score was @score@; your personal high score is @highScore@.<br>
                     Press space to play again.
                 </h3>
             </div>
